Updated readme, added coverage npm runner

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Jest with react on the beach. ",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
